# routes/index.js
@@ -9,4 +9,6 @@ router.get('/', (req, res) => {
 
 router.use('/contacts', require('./contacts'));
 
+router.use('/books', require('./books'));
+
 module.exports = router;
